gtk-cursor-aspect-ratio can not be changed via settings.ini
2154b8e7 added a gtk-cursor-aspect-ratio
setting to GtkSettings
as a float property. This setting however can not be changed from settings.ini
, because there is no parser for float values in gtk_settings_load_from_key_file()
, only for double. This results in error messages like this:
Gtk-Message: 02:44:01.404: (for origin information, set GTK_DEBUG): failed to retrieve property 'gtk-cursor-aspect-ratio' of type 'gfloat' from rc file value "((GString*) 0x28056a0)" of type 'gfloat'
Either the property needs to be changed to a double, or a float parser needs to be added to gtk_settings_load_from_key_file()
. I can open a MR if you can tell me what the preferred variant would be.
This affects gtk3 as well since the patch that introduced this property got backported in 804ae299.